--- a/src/main/webapp/css/my.css
+++ b/src/main/webapp/css/my.css
@@ -8,14 +8,14 @@ body {
     margin: 0 auto;
 }
 
-.table-block {
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-content: center;
-    flex-wrap: wrap;
-}
+/*.table-block {*/
+/*    padding: 10px;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    flex-direction: column;*/
+/*    align-content: center;*/
+/*    flex-wrap: wrap;*/
+/*}*/
 
 table {
     border-collapse: collapse;
