--- a/src/main/webapp/css/my.css
+++ b/src/main/webapp/css/my.css
@@ -3,30 +3,168 @@ body {
     margin: 20px;
 }
 
-.container {
-    padding-top: 50px;
-    margin: 0 auto;
+#count_pages {
+    padding: 5px;
+    font-size: 15px;
+    color: #696969;
+    border: 1px solid rgb(201 201 201);
+    border-radius: 5px;
+    outline: none;
 }
-
-/*.table-block {*/
-/*    padding: 10px;*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    flex-direction: column;*/
-/*    align-content: center;*/
-/*    flex-wrap: wrap;*/
-/*}*/
 
 table {
-    border-collapse: collapse;
-    width: 80%;
-}
-
-table, th, td {
-    border: 1px solid black;
+    width: 100%;
+    margin: 20px 0;
+    font-size: 16px;
+    text-align: left;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 th, td {
-    padding: 4px;
-    text-align: left;
+    padding: 12px 15px;
+}
+
+th {
+    background-color: #009879;
+    color: #ffffff;
+    font-size: 18px;
+    font-weight: 300;
+    letter-spacing: 0.06em;
+}
+
+tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+tr:nth-child(even) {
+    background-color: #f3f3f3;
+}
+
+tr:nth-child(odd) {
+    background-color: #f8f8f8;
+}
+
+tr:hover {
+    background-color: #e9ffea;
+}
+
+#paging_buttons .page-btn-style {
+    min-width: 30px;
+    margin-left: 5px;
+    color: wheat;
+    padding: 5px;
+    background-color: #009879;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0 6px 7px rgba(0, 0, 0, 0.25);
+}
+
+#paging_buttons .page-btn-style:hover {
+    cursor: pointer;
+    background-color: #00a186;
+    box-shadow: 0 4px 7px rgba(0, 0, 0, 0.25);
+}
+
+.divider {
+    margin-top: 20px;
+    color: white;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
+}
+
+#openModal {
+    min-width: 270px;
+    padding: 10px 20px;
+    background-color: #009879;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 20px;
+    font-size: 18px;
+    font-weight: 300;
+    letter-spacing: 0.06em;
+    box-shadow: 0 6px 7px rgba(0, 0, 0, 0.25);
+    transition: letter-spacing 0.4s ease;
+}
+
+#openModal:hover {
+    background-color: #00a186;
+    box-shadow: 0 4px 7px rgba(0, 0, 0, 0.25);
+    letter-spacing: 0.08em;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 400px;
+    position: relative;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.close-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 20px;
+    color: #aaa;
+    cursor: pointer;
+}
+
+.close-btn:hover {
+    color: black;
+    cursor: pointer;
+}
+
+
+.modal-content h2 {
+    text-align: center;
+}
+
+.modal-content label {
+    display: block;
+    margin: 10px 0 5px;
+}
+
+.modal-content input,
+.modal-content select {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.modal-content button {
+    width: 100%;
+    padding: 10px;
+    background-color: #009879;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: 300;
+    letter-spacing: 0.06em;
+    box-shadow: 0 6px 7px rgba(0, 0, 0, 0.25);
+    transition: letter-spacing 0.4s ease;
+}
+
+.modal-content button:hover {
+    background-color: #00a186;
+    box-shadow: 0 4px 7px rgba(0, 0, 0, 0.25);
+    letter-spacing: 0.1em;
 }
